Improved equation formatting and errors and fixed bug in calc_phi_normal_vector_angle

--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -2989,42 +2989,51 @@ vector points:
 \begin{equation}
   \theta_n =
   \begin{cases}
-    \frac{1}{2}\pi - \tan^{-1}(\frac{n_y}{n_x}), & \text{for}\ n_x\geq0 & \text{and}\ n_y\geq0\\
-    \frac{3}{2}\pi + \tan^{-1}(\frac{n_y}{|n_x|}), & \text{for}\ n_x\leq0 & \text{and}\ n_y\geq0\\
-    \frac{3}{2}\pi - \tan^{-1}(\frac{n_y}{n_x}), & \text{for}\ n_x\leq0 & \text{and}\ n_y\leq0\\
-    \frac{1}{2}\pi - \tan^{-1}(\frac{|n_y|}{n_x}), & \text{for}\ n_x\geq0 & \text{and}\ n_y\leq0\\
+    \frac{1}{2}\pi - \tan^{-1}(\frac{n_y}{n_x}), & \text{for}\ n_x > 0 & \text{and}\ n_y \geq 0 \\
+    \frac{1}{2}\pi + \tan^{-1}(\frac{|n_y|}{n_x}), & \text{for}\ n_x > 0 & \text{and}\ n_y < 0 \\
+    \frac{3}{2}\pi + \tan^{-1}(\frac{n_y}{|n_x|}), & \text{for}\ n_x < 0 & \text{and}\ n_y \geq 0 \\
+    \frac{3}{2}\pi - \tan^{-1}(\frac{n_y}{n_x}), & \text{for}\ n_x < 0 & \text{and}\ n_y < 0 \\
+    0, & \text{for}\ n_x = 0 & \text{and}\ n_y \geq 0 \\
+    \pi, & \text{for}\ n_x = 0 & \text{and}\ n_y < 0 \\
   \end{cases}
 \end{equation}
 
 #+name: phi-field-normal-vector-angle
 #+begin_src python :tangle ../src/pyretechnics/eulerian_level_set.py
-from math import atan2, pi
+from math import atan, pi
 
 def calc_phi_normal_vector_angle(phi_normal_vector):
     """
     Calculate the angle (measured in radians clockwise from North)
     to which the phi field's normal vector points.
-
-    NOTE: The origin cell (x=0,y=0) is located in the upper left corner
-          of the grid in Python arrays. Thus, as x increases, we move
-          to the east, and as y increases, we move to the south.
     """
     n_x = phi_normal_vector["n_x"]
     n_y = phi_normal_vector["n_y"]
-    if n_x >= 0 and n_y >= 0:
-        return 1/2 * pi - atan2(n_y, n_x)
-    elif n_x < 0 and n_y >= 0:
-        return 3/2 * pi + atan2(n_y, abs(n_x))
-    elif n_x < 0 and n_y < 0:
-        return 3/2 * pi - atan2(n_y, n_x)
-    elif n_x >= 0 and n_y < 0:
-        return 1/2 * pi + atan2(abs(n_y), n_x)
+    if n_x > 0:
+        if n_y >= 0:
+            return 1/2 * pi - atan(n_y / n_x)
+        elif n_y < 0:
+            return 1/2 * pi + atan(abs(n_y) / n_x)
+    elif n_x < 0:
+        if n_y >= 0:
+            return 3/2 * pi + atan(n_y / abs(n_x))
+        elif n_y < 0:
+            return 3/2 * pi - atan(n_y / n_x)
+    else:
+        if n_y >= 0:
+            return 0.0
+        elif n_y < 0:
+            return pi
 #+end_src
 
 Now that we can compute the fire front normal vector, we can find the
-spread rate in this direction by simply calculating the dot product of
-the normal vector with the maximum spread rate vector calculated for
-each cell.
+spread rate in this direction by combining this vector with the
+maximum spread rate vector and elliptical eccentricity values
+calculated for each grid cell, using the approaches described in
+sections [[Surface Fire Formulas]] and [[Crown Fire Formulas]].
+
+We will refer to the spread rate vector normal to the fire front in
+the following sections as $U$ with spatial components $U_x$ and $U_y$.
 
 **** Numerical Solution of the $\phi$ Field Equation
 
@@ -3044,8 +3053,9 @@ First, we define the parameter $r$ and the Superbee flux limiter
 $B(r)$ as follows:
 
 \begin{align*}
-  r &= \frac{\delta\phi_{\textrm{up}}}{\delta\phi_{\textrm{loc}}} \\
-  B(r) &= \textrm{max}(0, \textrm{min}(2r, 1), \textrm{min}(r, 2))
+  r &= \frac{\delta\phi_{\text{up}}}{\delta\phi_{\text{loc}}} \\
+  \\
+  B(r) &= \text{max}(0, \text{min}(2r, 1), \text{min}(r, 2))
 \end{align*}
 
 #+name: superbee-flux-limiter
@@ -3065,8 +3075,9 @@ derivatives of the $\phi$ field in terms of "east", "west", "north",
 and "south" values as follows:
 
 \begin{align*}
-  \frac{\partial{\phi}}{\partial x} &\approx \frac{\phi_{\textrm{east}} - \phi_{\textrm{west}}}{\Delta x} \\
-  \frac{\partial{\phi}}{\partial y} &\approx \frac{\phi_{\textrm{north}} - \phi_{\textrm{south}}}{\Delta y}
+  \frac{\partial{\phi}}{\partial x} &\approx \frac{\phi_{\text{east}} - \phi_{\text{west}}}{\Delta x} \\
+  \\
+  \frac{\partial{\phi}}{\partial y} &\approx \frac{\phi_{\text{north}} - \phi_{\text{south}}}{\Delta y}
 \end{align*}
 
 #+name: dphi_partial_derivatives
@@ -3087,17 +3098,17 @@ def calc_dphi_dy(phi_north, phi_south, dy):
 For the east face:
 
 \begin{align*}
-  \delta\phi_{\textrm{loc}} &= \phi_{i+1,j} - \phi{i,j} \\
+  \delta\phi_{\text{loc}} &= \phi_{i+1,j} - \phi{i,j} \\
   \\
-  \delta\phi_{\textrm{up}} &= \begin{cases}
-                                \phi_{i,j} - \phi_{i-1,j} & \textrm{for} u_{x,i,j} \geq 0 \\
-                                \phi_{i+2,j} - \phi_{i+1,j} & \textrm{for} u_{x,i,j} < 0
-                              \end{cases} \\
+  \delta\phi_{\text{up}} &= \begin{cases}
+                              \phi_{i,j} - \phi_{i-1,j} & \text{for}\ u_{x,i,j} > 0 \\
+                              \phi_{i+2,j} - \phi_{i+1,j} & \text{for}\ u_{x,i,j} < 0
+                            \end{cases} \\
   \\
-  \delta\phi_{\textrm{east}} &= \begin{cases}
-                                  \phi_{i,j} + \frac{1}{2}B(r)\delta\phi_{loc} & \textrm{for} u_{x,i,j} \geq 0 \\
-                                  \phi_{i+1,j} - \frac{1}{2}B(r)\delta\phi_{loc} & \textrm{for} u_{x,i,j} < 0
-                                \end{cases}
+  \phi_{\text{east}} &= \begin{cases}
+                          \phi_{i,j} + \frac{1}{2}B(r)\delta\phi_{loc} & \text{for}\ u_{x,i,j} > 0 \\
+                          \phi_{i+1,j} - \frac{1}{2}B(r)\delta\phi_{loc} & \text{for}\ u_{x,i,j} < 0
+                        \end{cases}
 \end{align*}
 
 #+name: phi_east
@@ -3107,30 +3118,34 @@ def calc_phi_east(phi, u_x, x, y):
     TODO: Add docstring
     """
     dphi_loc = phi[y][x+1] - phi[y][x]
-    if u_x[y][x] >= 0:
+    u_xij = u_x[y][x]
+    if u_xij > 0:
         dphi_up = phi[y][x] - phi[y][x-1]
         B = calc_superbee_flux_limiter(dphi_up, dphi_loc)
         return phi[y][x] + 0.5 * B * dphi_loc
-    else:
+    elif u_xij < 0:
         dphi_up = phi[y][x+2] - phi[y][x+1]
         B = calc_superbee_flux_limiter(dphi_up, dphi_loc)
         return phi[y][x+1] - 0.5 * B * dphi_loc
+    else:
+        # FIXME: What is the correct value for this case? Update the equation above accordingly.
+        return 0.0
 #+end_src
 
 For the west face:
 
 \begin{align*}
-  \delta\phi_{\textrm{loc}} &= \phi_{i-1,j} - \phi{i,j} \\
+  \delta\phi_{\text{loc}} &= \phi_{i-1,j} - \phi{i,j} \\
   \\
-  \delta\phi_{\textrm{up}} &= \begin{cases}
-                                \phi_{i-2,j} - \phi_{i-1,j} & \textrm{for} u_{x,i,j} \geq 0 \\
-                                \phi_{i,j} - \phi_{i+1,j} & \textrm{for} u_{x,i,j} < 0
-                              \end{cases} \\
+  \delta\phi_{\text{up}} &= \begin{cases}
+                              \phi_{i-2,j} - \phi_{i-1,j} & \text{for}\ u_{x,i,j} > 0 \\
+                              \phi_{i,j} - \phi_{i+1,j} & \text{for}\ u_{x,i,j} < 0
+                            \end{cases} \\
   \\
-  \delta\phi_{\textrm{west}} &= \begin{cases}
-                                  \phi_{i-1,j} - \frac{1}{2}B(r)\delta\phi_{loc} & \textrm{for} u_{x,i,j} \geq 0 \\
-                                  \phi_{i,j} + \frac{1}{2}B(r)\delta\phi_{loc} & \textrm{for} u_{x,i,j} < 0
-                                \end{cases}
+  \phi_{\text{west}} &= \begin{cases}
+                          \phi_{i-1,j} - \frac{1}{2}B(r)\delta\phi_{loc} & \text{for}\ u_{x,i,j} > 0 \\
+                          \phi_{i,j} + \frac{1}{2}B(r)\delta\phi_{loc} & \text{for}\ u_{x,i,j} < 0
+                        \end{cases}
 \end{align*}
 
 #+name: phi_west
@@ -3140,30 +3155,34 @@ def calc_phi_west(phi, u_x, x, y):
     TODO: Add docstring
     """
     dphi_loc = phi[y][x-1] - phi[y][x]
-    if u_x[y][x] >= 0:
+    u_xij = u_x[y][x]
+    if u_xij > 0:
         dphi_up = phi[y][x-2] - phi[y][x-1]
         B = calc_superbee_flux_limiter(dphi_up, dphi_loc)
         return phi[y][x-1] - 0.5 * B * dphi_loc
-    else:
+    elif u_xij < 0:
         dphi_up = phi[y][x] - phi[y][x+1]
         B = calc_superbee_flux_limiter(dphi_up, dphi_loc)
         return phi[y][x] + 0.5 * B * dphi_loc
+    else:
+        # FIXME: What is the correct value for this case? Update the equation above accordingly.
+        return 0.0
 #+end_src
 
 For the north face:
 
 \begin{align*}
-  \delta\phi_{\textrm{loc}} &= \phi_{i,j+1} - \phi{i,j} \\
+  \delta\phi_{\text{loc}} &= \phi_{i,j+1} - \phi{i,j} \\
   \\
-  \delta\phi_{\textrm{up}} &= \begin{cases}
-                                \phi_{i,j} - \phi_{i,j-1} & \textrm{for} u_{y,i,j} \geq 0 \\
-                                \phi_{i,j+2} - \phi_{i,j+1} & \textrm{for} u_{y,i,j} < 0
-                              \end{cases} \\
+  \delta\phi_{\text{up}} &= \begin{cases}
+                              \phi_{i,j} - \phi_{i,j-1} & \text{for}\ u_{y,i,j} > 0 \\
+                              \phi_{i,j+2} - \phi_{i,j+1} & \text{for}\ u_{y,i,j} < 0
+                            \end{cases} \\
   \\
-  \delta\phi_{\textrm{north}} &= \begin{cases}
-                                   \phi_{i,j} + \frac{1}{2}B(r)\delta\phi_{loc} & \textrm{for} u_{y,i,j} \geq 0 \\
-                                   \phi_{i,j+1} - \frac{1}{2}B(r)\delta\phi_{loc} & \textrm{for} u_{y,i,j} < 0
-                                 \end{cases}
+  \phi_{\text{north}} &= \begin{cases}
+                           \phi_{i,j} + \frac{1}{2}B(r)\delta\phi_{loc} & \text{for}\ u_{y,i,j} > 0 \\
+                           \phi_{i,j+1} - \frac{1}{2}B(r)\delta\phi_{loc} & \text{for}\ u_{y,i,j} < 0
+                         \end{cases}
 \end{align*}
 
 #+name: phi_north
@@ -3173,30 +3192,34 @@ def calc_phi_north(phi, u_y, x, y):
     TODO: Add docstring
     """
     dphi_loc = phi[y-1][x] - phi[y][x]
-    if u_y[y][x] >= 0:
+    u_yij = u_y[y][x]
+    if u_yij > 0:
         dphi_up = phi[y][x] - phi[y+1][x]
         B = calc_superbee_flux_limiter(dphi_up, dphi_loc)
         return phi[y][x] + 0.5 * B * dphi_loc
-    else:
+    elif u_yij < 0:
         dphi_up = phi[y-2][x] - phi[y-1][x]
         B = calc_superbee_flux_limiter(dphi_up, dphi_loc)
         return phi[y-1][x] - 0.5 * B * dphi_loc
+    else:
+        # FIXME: What is the correct value for this case? Update the equation above accordingly.
+        return 0.0
 #+end_src
 
 For the south face:
 
 \begin{align*}
-  \delta\phi_{\textrm{loc}} &= \phi_{i,j-1} - \phi{i,j} \\
+  \delta\phi_{\text{loc}} &= \phi_{i,j-1} - \phi{i,j} \\
   \\
-  \delta\phi_{\textrm{up}} &= \begin{cases}
-                                \phi_{i,j-2} - \phi_{i,j-1} & \textrm{for} u_{y,i,j} \geq 0 \\
-                                \phi_{i,j} - \phi_{i,j+1} & \textrm{for} u_{y,i,j} < 0
-                              \end{cases} \\
+  \delta\phi_{\text{up}} &= \begin{cases}
+                              \phi_{i,j-2} - \phi_{i,j-1} & \text{for}\ u_{y,i,j} > 0 \\
+                              \phi_{i,j} - \phi_{i,j+1} & \text{for}\ u_{y,i,j} < 0
+                            \end{cases} \\
   \\
-  \delta\phi_{\textrm{south}} &= \begin{cases}
-                                   \phi_{i,j-1} - \frac{1}{2}B(r)\delta\phi_{loc} & \textrm{for} u_{y,i,j} \geq 0 \\
-                                   \phi_{i,j} + \frac{1}{2}B(r)\delta\phi_{loc} & \textrm{for} u_{y,i,j} < 0
-                                 \end{cases}
+  \phi_{\text{south}} &= \begin{cases}
+                           \phi_{i,j-1} - \frac{1}{2}B(r)\delta\phi_{loc} & \text{for}\ u_{y,i,j} > 0 \\
+                           \phi_{i,j} + \frac{1}{2}B(r)\delta\phi_{loc} & \text{for}\ u_{y,i,j} < 0
+                         \end{cases}
 \end{align*}
 
 #+name: phi_south
@@ -3206,18 +3229,22 @@ def calc_phi_south(phi, u_y, x, y):
     TODO: Add docstring
     """
     dphi_loc = phi[y+1][x] - phi[y][x]
-    if u_y[y][x] >= 0:
+    u_yij = u_y[y][x]
+    if u_yij > 0:
         dphi_up = phi[y+2][x] - phi[y+1][x]
         B = calc_superbee_flux_limiter(dphi_up, dphi_loc)
         return phi[y+1][x] - 0.5 * B * dphi_loc
-    else:
+    elif u_yij < 0:
         dphi_up = phi[y][x] - phi[y-1][x]
         B = calc_superbee_flux_limiter(dphi_up, dphi_loc)
         return phi[y][x] + 0.5 * B * dphi_loc
+    else:
+        # FIXME: What is the correct value for this case? Update the equation above accordingly.
+        return 0.0
 #+end_src
 
-Now that the various spatial partial derivatives have been calculated,
-we can march the $\phi$ field solution forward in time using a second
+Once the various spatial partial derivatives have been calculated, we
+can march the $\phi$ field solution forward in time using a second
 order Runge Kutta method as follows:
 
 \begin{align*}
